Fixed build configuration